product allownces group and migrations added Imported from Changeset 2494

--- a/WMS/Views/Theme/Default/DirectSales/CreateDirectSales.cshtml
+++ b/WMS/Views/Theme/Default/DirectSales/CreateDirectSales.cshtml
@@ -85,7 +85,7 @@
                         @Html.Label("Select Product", htmlAttributes: new { @class = "col-md-4" })
                         <div class="col-md-8 largecomboboxEdit">
                             @*@Html.DropDownList("ProductId", Model.AllProducts, new { @class = "chosen-select" })*@
-                            @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                            @Html.Partial("ProductLargeDataComboBoxPartial")
                         </div>
                     </div>
 
