--- a/WMS/Views/Theme/Default/InventoryStocks/InventoryAdjustments.cshtml
+++ b/WMS/Views/Theme/Default/InventoryStocks/InventoryAdjustments.cshtml
@@ -47,7 +47,7 @@
                             @Html.Label("Product")
                         </td>
                         <td>
-                            @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                            @Html.Partial("ProductLargeDataComboBoxPartial")
                             @Html.Hidden("ProductId")
                             @Html.ValidationMessageFor(model => model.ProductId)
                         </td>
