--- a/WMS/Views/Theme/Default/InventoryStocks/MoveStock.cshtml
+++ b/WMS/Views/Theme/Default/InventoryStocks/MoveStock.cshtml
@@ -52,7 +52,7 @@
                     @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
 
-                        @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                        @Html.Partial("ProductLargeDataComboBoxPartial")
 
                     </div>
                 </div>
