--- a/WMS/Views/Theme/Default/InventoryTransaction/GoodsReturn.cshtml
+++ b/WMS/Views/Theme/Default/InventoryTransaction/GoodsReturn.cshtml
@@ -58,7 +58,7 @@
 
                 <div class="col-md-8">
 
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
                     @*@Html.DropDownList("grProducts", null, htmlAttributes: new { @class = "chosen-select grDrp" })*@
                 </div>
             </div>
