--- a/WMS/Views/Theme/Default/InventoryTransaction/WastedGoodsReturn.cshtml
+++ b/WMS/Views/Theme/Default/InventoryTransaction/WastedGoodsReturn.cshtml
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-md-8">
 
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
