--- a/WMS/Views/Theme/Default/Invoice/CreateInvoice.cshtml
+++ b/WMS/Views/Theme/Default/Invoice/CreateInvoice.cshtml
@@ -68,7 +68,7 @@
                     <div class="col-md-8 largecomboboxEdit">
                         @* @Html.DropDownListFor(m => m.ProductId, Model.AllProducts, new { @class = "chosen-select" })*@
 
-                        @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                        @Html.Partial("ProductLargeDataComboBoxPartial")
                     </div>
                 </div>
 
