--- a/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
@@ -55,7 +55,7 @@
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                @Html.Partial("~/Views/Theme/Default/DevexHelper/PlaceholdersHtmlEditorPartial.cshtml", new HtmlEditorModel() { HtmlContent = Model.Contant, EditorName = "Contant", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
+                @Html.Partial("PlaceholdersHtmlEditorPartial", new HtmlEditorModel() { HtmlContent = Model.Content, EditorName = "Content", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
