--- a/WMS/Views/Theme/Modern/OrderDetail/Create.cshtml
+++ b/WMS/Views/Theme/Modern/OrderDetail/Create.cshtml
@@ -83,7 +83,7 @@
                 @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "col-md-4 prdlbl" })
                 <div class="col-md-8">
                     <div id="prdid_chosen">
-                        @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                        @Html.Partial("ProductLargeDataComboBoxPartial")
                     </div>
                     @if (Model.OrderDetailID == 0)
                     {
@@ -143,7 +143,7 @@
                 @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
 
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
 
                 </div>
             </div>
