--- a/WMS/Views/Theme/Modern/PalletTracking/Create.cshtml
+++ b/WMS/Views/Theme/Modern/PalletTracking/Create.cshtml
@@ -44,7 +44,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "col-md-4 prdlbl" })
                 <div class="col-md-8">
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
                     @Html.ValidationMessageFor(model => model.ProductId)
                 </div>
             </div>
