--- a/WMS/Views/Theme/Modern/Products/_ProductKits.cshtml
+++ b/WMS/Views/Theme/Modern/Products/_ProductKits.cshtml
@@ -21,7 +21,7 @@
                 <label class="col-md-4">Product</label>
                 <div class="col-md-8">
 
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
 
                 </div>
             </div>
@@ -75,7 +75,7 @@ else
                 <label class="col-md-4">Product</label>
                 <div class="col-md-8">
 
-                    @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+                    @Html.Partial("ProductLargeDataComboBoxPartial")
 
                 </div>
             </div>
