--- a/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
+++ b/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
@@ -99,7 +99,7 @@
         @Html.Label("Enter or scan Product Code", htmlAttributes: new { @class = "col-md-4" })
 
         <div class="col-md-8">
-            @Html.Partial("~/Views/Shared/ProductLargeDataComboBoxPartial.cshtml")
+            @Html.Partial("ProductLargeDataComboBoxPartial")
             @*@Html.DropDownList("products", null, htmlAttributes: new { @class = "chosen-select bsDrp" })*@
         </div>
     </div>
