--- a/WarehouseEcommerce/Views/Theme/Smart/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Home/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="row">
             <div id="content" class="col-lg-12">
                 @Html.Partial("_DeliveryInfoPartial")
-                @Html.Partial("_SliderPartial")
+                @Html.Action("_SliderPartial")
                 @Html.Action("_TopProductPartial")
                 @Html.Action("_TopProductBannerPartial")
                 @Html.Action("_OnSalePartial")
