--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_SliderPartial.cshtml
@@ -1,34 +1,44 @@
-﻿
-    <div id="carousel-example-generic" class="carousel slide home-slider" data-ride="carousel">
-        <!-- Indicators -->
-        @*<ol class="carousel-indicators">
+﻿@model List<Ganedata.Core.Entities.Domain.WebsiteSlider>
+
+<div id="carousel-example-generic" class="carousel slide home-slider" data-ride="carousel">
+
+    <!-- Indicators -->
+    @*<ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         </ol>*@
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
+    <!-- Wrapper for slides -->
+
+
+
+
+
+    <div class="carousel-inner" role="listbox">
+        @foreach (var item in Model)
+        {
             <div class="item active">
-                <img src="~/Content/Theme/Smart/app/img/slider/SliderImage.png" alt="MacBookAir" class="img-responsive" />
+                <img src="@ViewBag.BaseFilePath@item.Image" alt="@item.ImageAltTag" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
-            @*<div class="item">
-            <img src="~/Content/Theme/Smart/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
-            <div class="carousel-caption">
+        }
+        @*<div class="item">
+                <img src="~/Content/Theme/Smart/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
+                <div class="carousel-caption">
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="~/Content/Theme/Smart/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
-            <div class="carousel-caption">
-            </div>
-        </div>*@
+            <div class="item">
+                <img src="~/Content/Theme/Smart/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
+                <div class="carousel-caption">
+                </div>
+            </div>*@
 
-        </div>
+    </div>
 
-        <!-- Controls -->
-        @*<a class="left carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <!-- Controls -->
+    @*<a class="left carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
@@ -36,6 +46,7 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>*@
-    </div>
-   
+
+</div>
+
 
