--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
@@ -1,11 +1,15 @@
-﻿<div id="top-header" class="sticky-header">
+﻿@using Ganedata.Core.Services
+@{
+    var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
+}
+<div id="top-header" class="sticky-header">
     <header class="custom-header-container">
         <div class="custom-container">
             <div class="header-row custom-max-width m-auto pl-10 pr-10">
                 <div class="head-logo">
                     <div id="logo" class="ui-logo">
                         <a href="@Url.Action("Index","Home")">
-                            <img src="/Content/Theme/Smart/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
+                            <img src="@ViewBag.BaseFilePath@siteProperties.Logo" title="@siteProperties.SiteName" alt="@siteProperties.SiteName" class="img-responsive" />
                         </a>
                     </div>
                 </div>
@@ -33,7 +37,7 @@
                                     <svg width="20px" height="19px">
                                         <use xlink:href="/Content/Theme/Smart/app/img/icons/icons.svg#call"></use>
                                     </svg>
-                                    +44 (0) 333 323 0202
+                                    @siteProperties.WebsiteContactPhone
                                 </span>
                             </a>
                         </div>
