New fileds added for content and tenatwebsite with naviagtuion link for product allocations Imported from Changeset 2497

--- a/WMS/Views/Theme/Default/ProductAllowanceGroups/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowanceGroups/Index.cshtml
@@ -49,6 +49,12 @@
         </div>
 
     </div>
-   
+    <div class='col-md-offset-2 col-md-10 bottom-right'>
+        <div class="back-list">
+            <a href="@Url.Action("Index","TenantWebsites")" class="btn btn-default">Back to List</a>
+        </div>
+
+    </div>
+
 </div>
 
