--- a/WMS/Views/Theme/Default/ProductAllowances/Create.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowances/Create.cshtml
@@ -24,6 +24,7 @@
     @Html.AntiForgeryToken()
 
     @Html.HiddenFor(model => model.ProductId)
+    @Html.HiddenFor(model => model.SiteID, (int)ViewBag.SiteId)
     <div class="col-md-12">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="input-group h-100 justify-content-center align-items-center">
@@ -68,7 +69,7 @@
     <div class="input-group h-100 justify-content-center align-items-center">
         <div class="col-md-offset-2 col-md-10 bottom-right">
             <input type="submit" class="btn btn-primary" value="Create" />
-            <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
+            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = (int)ViewBag.SiteId }, new { @class = "btn btn-default" })</div>
         </div>
     </div>
 }
