--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductBannerPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductBannerPartial.cshtml
@@ -1,29 +1,34 @@
-﻿<div class="topbanner">
+﻿@model List<Ganedata.Core.Entities.Domain.WebsiteNavigation>
+
+<div class="topbanner">
     <div class="row">
         <div class="imgbanner side-banner col-12 col-lg-3 col-md-2 d-xs-none">
             <div class=" beffect">
-                <a href="#">
-                    <img src="/Content/Theme/Smart/app/img/home/Banner_1.png" alt="banner" class="img-responsive" />
+                <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(0).Name })">
+                    <img src="@ViewBag.BaseFilePath@Model.ElementAt(0).Image" alt="@Model.ElementAt(0).Name" class="img-responsive" />
                 </a>
             </div>
         </div>
         <div class="cbanner col-12 col-lg-6 col-md-12">
             <div class="beffect">
                 <a href="#">
-                    <img src="/Content/Theme/Smart/app/img/home/Banner_2.png" alt="banner" class="img-responsive center-block" />
-                </a>
+                    <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(1).Name })">
+                        <img src="@ViewBag.BaseFilePath@Model.ElementAt(1).Image" alt="@Model.ElementAt(1).Name" class="img-responsive center-block" />
+                    </a>
             </div>
             <div class="beffect">
                 <a href="#">
-                    <img src="/Content/Theme/Smart/app/img/home/Banner_3.png" alt="banner" class="img-responsive center-block" />
-                </a>
+                    <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(2).Name })">
+                        <img src="@ViewBag.BaseFilePath@Model.ElementAt(2).Image" alt="@Model.ElementAt(2).Name" class="img-responsive center-block" />
+                    </a>
             </div>
         </div>
         <div class="col-3 col-lg-3 col-md-2 side-banner d-xs-none">
             <div class="sellbanner beffect">
                 <a href="#">
-                    <img src="/Content/Theme/Smart/app/img/home/Banner_4.png" alt="banner" class="img-responsive center-block" />
-                </a>
+                    <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(3).Name })">
+                        <img src="@ViewBag.BaseFilePath@Model.ElementAt(3).Image" alt="@Model.ElementAt(3).Name" class="img-responsive" />
+                    </a>
             </div>
         </div>
     </div>
