--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
     @*@Scripts.Render("~/bundles/modernizr")*@
 
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/javascript-searchproduct.js"></script>
     <script src="~/Content/Theme/University/app/js/owl.carousel.min.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_skew_carousle.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_custom_script.js"></script>
