dynmics smart theme changes added Imported from Changeset 2501

--- a/WarehouseEcommerce/Views/Theme/Smart/Home/page.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Home/page.cshtml
@@ -12,7 +12,7 @@
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase mb-15">@Model.Title</h2>
                         <div id="updateCart">
-                            <p>@Model.Content</p>
+                            <p>@Html.Raw(Model.Content)</p>
                         </div>
                     </div>
                 </div>
