--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -103,6 +103,7 @@
     $(document).ready(function () {
 
         $("#cart").hover(function () {
+            debugger;
             $('#cart').addClass('open');
         });
         $("#cart").mouseleave(function () {
