University theme half completed Imported from Changeset 2502

--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_CartItemsPartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model List<Ganedata.Core.Entities.Domain.OrderDetailSessionViewModel>
+﻿@model List<Ganedata.Core.Entities.Domain.OrderDetailSessionViewModel>
 
     @foreach (var item in Model)
     {
