--- a/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Index";
 }
-
-@Html.Partial("_BannerPartial")
+@Html.Partial("_DeliveryInfoPartial")
+@Html.Action("_SliderPartial")
 @Html.Action("_TopCategoryPartial")
 @Html.Action("_SpecialProductPartial")
 @Html.Partial("_SubscribePartial")
