--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -12,13 +12,25 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="#"><i class="icon-home"></i></a>
+                            <a href="/"><i class="icon-home"></i></a>
                         </li>
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">New</a></li>
-                        <li class="breadcrumb-item">
-                            <a href="#">Unisex Zipped Hoodie - Black</a>
-                        </li>
+                        @if (!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName))
+                        {
+                            <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { department = @Model.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName) ? Model.TenantDepartment.DepartmentName : "")</a></li>
+                        }
+                        @if (Url.Action() != Url.Action("list", "Products", new { department = Model.TenantDepartment.DepartmentName }))
+                        {
+                            if (!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup))
+                            {
+                                <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup.ProductGroup, department = Model.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup.ProductGroup : "")</a></li>
+                            }
+                        }
+                        @if (!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName))
+                        {
+                            <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup.ProductGroup, department = Model.TenantDepartment.DepartmentName, values ="TypeS-"+Model.ProductCategory.ProductCategoryName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
+                        }
+
+                        <li class="breadcrumb-item">@Model.Name</li>
                     </ol>
                 </nav>
             </div>
@@ -29,80 +41,35 @@
                     <span id="zoomViewTrigger"><i class="icon-search"></i></span>
                     <span class="img_view_area">
                         <img id="zoom_01"
-                             src="/Content/Theme/University/app/images/productslist/7.jpg"
-                             data-zoom-image="/Content/Theme/University/app/images/productslist/7.jpg" />
+                             src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")"
+                             data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
                         <!-- <img src="/Content/Theme/University/app/images/productslist/7.jpg" alt="" /> -->
                     </span>
                     <div class="img_thumb_sliderwrap">
-                        <div id="gal01"
-                             class="owl-carousel owl-theme nb_imageZoomCarrousle">
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/7.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/7.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/7.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/6.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/6.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/6.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/5.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/5.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/5.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/4.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/4.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/4.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/3.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/3.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/3.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#"
-                                   data-image="/Content/Theme/University/app/images/productslist/2.jpg"
-                                   data-zoom-image="/Content/Theme/University/app/images/productslist/2.jpg">
-                                    <img id="zoom_01"
-                                         src="/Content/Theme/University/app/images/productslist/2.jpg"
-                                         alt="" />
-                                </a>
-                            </div>
+                        <div id="gal01" class="owl-carousel owl-theme nb_imageZoomCarrousle">
+                            @foreach (var item in Model.ProductFiles)
+                            {
+                                var extension = Path.GetExtension(item.FilePath);
+                                <div class="item">
+                                    <a href="#" data-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" data-zoom-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
+                                        <img id="zoom_01" src="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="" />
+                                    </a>
+                                </div>
+
+                            }
+
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-7 col-lg-6 offset-lg-1">
                 <div class="nb_prd_det_rightsec">
-                    <h2 class="head">Unisex Zipped Hoodie - Black</h2>
+                    <h2 class="head">@Model.Name</h2>
                     <p class="subContent">
-                        Contemporary chunky hooded zipped sweatshirt featuring
-                        Northumbria University print to the left chest.
+                       @Model.SKUCode
                     </p>
-                    <span class="prd_amnt">£34.99</span>
-                    <div class="col_Sec">
+                    <span class="prd_amnt">@ViewBag.CurrencySymbol @Model.SellPrice</span>
+                    @*<div class="col_Sec">
                         <span class="col_lbl">COLOR : BLACK</span>
                         <span class="col_box col_black"></span>
                     </div>
@@ -119,41 +86,40 @@
                             <li class="col4"><a href="">xl</a></li>
                             <li class="col4"><a href="">xxl</a></li>
                         </ul>
-                    </div>
-                    <div class="footSec">
-                        <div class="qty">
-                            <span>quantity</span>
-                            <div class="sortBysec">
-                                <select id="nb_prdpg_qtysel_box">
-                                    <option value="volvo">1</option>
-                                    <option value="saab">2</option>
-                                </select>
-                            </div>
+                    </div>*@
+                <div class="footSec">
+                    <div class="qty">
+                        <span>quantity</span>
+                        <div class="sortBysec">
+                            <input id="input-quantity" type="text" name="quantity" value="1" size="2" data-detail="true" />
                         </div>
-                        <button class="addTobasket">
+                    </div>
+                    @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
+                    {
+                        <button class="addTobasket" onclick="AddToCart(@Model.ProductId)">
                             Add to basket
                         </button>
-                        <button class="addtowishlistbtn">
-                            Add to Wishlist
+                    }
+                    else
+                    {
+                        <button class="addTobasket" disabled>
+                            Add to basket
                         </button>
-                        <a href="" class="addtowishlist">
-                            <i class="icon-love"></i>
-                        </a>
-                    </div>
+                    }
+                    <button class="addtowishlistbtn">
+                        Add to Wishlist
+                    </button>
+                    <a href="" class="addtowishlist">
+                        <i class="icon-love"></i>
+                    </a>
+                </div>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="nb_prod_bottomdes">
                     <h3 class="head">Description</h3>
                     <p class="content">
-                        Proin felis ex, maximus id accumsan ac, suscipit et dolor. Morbi
-                        tristique magna condimentum tellus rhoncus vehicula. Praesent
-                        varius neque eu arcu posuere porttitor. Mauris laoreet quis quam
-                        sed feugiat. Pellentesque ac metus non dolor elementum
-                        consectetur eget vulputate odio. Integer euismod risus et tortor
-                        mollis, eget tristique lacus pretium. Pellentesque gravida felis
-                        purus, ac elementum ex rutrum vitae. Nulla eu elit nec nisl
-                        dictum eleifend.
+                        @Model.Description.
                     </p>
                 </div>
             </div>
