--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -5,24 +5,18 @@
 <div class="col-md-4 col-lg-3">
     <div class="nb_prd_filterwrap">
         <div class="prod_count_sec">
-            <span class="count">30 Products</span>
+            <span class="count">@Model.Count Products</span>
             <ul>
                 <li>
                     <div class="form-group nb_prdpg_fg">
-                        <input type="checkbox" id="item1" />
-                        <label for="item1">New In</label>
+                        <input type="checkbox" id="stockS" value="In_stock" @(Request.Url.OriginalString.ToLower().Contains("in_stock") ? "checked" : "") />
+                        <label for="stockS">In Stock</label>
                     </div>
                 </li>
                 <li>
                     <div class="form-group nb_prdpg_fg">
-                        <input type="checkbox" id="item2" />
-                        <label for="item2">In Stock</label>
-                    </div>
-                </li>
-                <li>
-                    <div class="form-group nb_prdpg_fg">
-                        <input type="checkbox" id="item3" />
-                        <label for="item3">Back In Stock</label>
+                        <input type="checkbox" id="stockS" value="Out_stock" @(Request.Url.OriginalString.ToLower().Contains("out_stock") ? "checked" : "") />
+                        <label for="stockS">Out Stock</label>
                     </div>
                 </li>
             </ul>
@@ -36,7 +30,7 @@
                                 data-target="#collapseOne"
                                 aria-expanded="true"
                                 aria-controls="collapseOne">
-                            Category
+                            Price
                         </button>
                     </h5>
                 </div>
@@ -46,24 +40,17 @@
                      data-parent="#accordion">
                     <div class="nb_filter_body">
                         <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemc1" />
-                                    <label for="itemc1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemc2" />
-                                    <label for="itemc2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemc3" />
-                                    <label for="itemc3">Item 3</label>
-                                </div>
-                            </li>
+                            @foreach (var item in Model.PriceInterval)
+                            {
+                                <li>
+                                    <div class="form-group nb_prdpg_fg">
+                                        <input type="checkbox" id="priceS" value="@(item.Item1+"_"+item.Item2)" @(Request.Url.OriginalString.ToLower().Contains(item.Item1 + "_" + item.Item2) ? "checked" : "") />
+                                        <label for="priceS">@ViewBag.CurrencySymbol@item.Item1 - @ViewBag.CurrencySymbol@item.Item2</label>
+                                    </div>
+                                </li>
+
+                            }
+
                         </ul>
                     </div>
                 </div>
@@ -74,7 +61,7 @@
                                 data-target="#collapse2"
                                 aria-expanded="true"
                                 aria-controls="collapse2">
-                            Size
+                            Brand
                         </button>
                     </h5>
                 </div>
@@ -84,24 +71,17 @@
                      data-parent="#accordion">
                     <div class="nb_filter_body">
                         <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="items1" />
-                                    <label for="items1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="items2" />
-                                    <label for="items2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="items3" />
-                                    <label for="items3">Item 3</label>
-                                </div>
-                            </li>
+                            @foreach (var item in Model.Manufacturer)
+                            {
+                                string name = item.Replace(" ", "_").Replace(",", "^");
+                                <li>
+                                    <div class="form-group nb_prdpg_fg">
+                                        <input type="checkbox" id="BrandS" value="@(name)" @(Request.Url.OriginalString.ToLower().Contains(name.ToLower()) ? "checked" : "") />
+                                        <label for="BrandS">@(item)</label>
+                                    </div>
+                                </li>
+
+                            }
                         </ul>
                     </div>
                 </div>
@@ -112,7 +92,7 @@
                                 data-target="#collapse3"
                                 aria-expanded="true"
                                 aria-controls="collapse3">
-                            Size Type
+                            By Type
                         </button>
                     </h5>
                 </div>
@@ -122,218 +102,57 @@
                      data-parent="#accordion">
                     <div class="nb_filter_body">
                         <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemst1" />
-                                    <label for="itemst1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemst2" />
-                                    <label for="itemst2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemst3" />
-                                    <label for="itemst3">Item 3</label>
-                                </div>
-                            </li>
+                            @foreach (var item in Model.subCategories)
+                            {
+                                string name = item.Replace(" ", "_").Replace(",", "^");
+                                <li>
+                                    <div class="form-group nb_prdpg_fg">
+                                        <input type="checkbox" id="TypeS" value="@(name)" @(Request.Url.OriginalString.ToLower().Contains(name.ToLower()) ? "checked" : "") />
+                                        <label for="TypeS">@(item)</label>
+                                    </div>
+                                </li>
+                            }
+
+
                         </ul>
                     </div>
                 </div>
-                <div class="nb_filter_head" id="filter4">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed"
-                                data-toggle="collapse"
-                                data-target="#collapse4"
-                                aria-expanded="true"
-                                aria-controls="collapse4">
-                            Color
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapse4"
-                     class="collapse"
-                     aria-labelledby="filter4"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemcol1" />
-                                    <label for="itemcol1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemcol2" />
-                                    <label for="itemcol2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemcol3" />
-                                    <label for="itemcol3">Item 3</label>
-                                </div>
-                            </li>
-                        </ul>
+                @* Adding dynmic attributes here *@
+                @foreach (var item in Model.AttributeValues)
+                {
+
+                    <div class="nb_filter_head" id="filter_@(item.Key)">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed"
+                                    data-toggle="collapse_@(item.Key)"
+                                    data-target="#collapse_@(item.Key)"
+                                    aria-expanded="true"
+                                    aria-controls="collapse_@(item.Key)">
+                                @item.Value.FirstOrDefault().ProductAttributes.AttributeName
+                            </button>
+                        </h5>
                     </div>
-                </div>
-                <div class="nb_filter_head" id="filter5">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed"
-                                data-toggle="collapse"
-                                data-target="#collapse5"
-                                aria-expanded="true"
-                                aria-controls="collapse5">
-                            Brand
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapse5"
-                     class="collapse"
-                     aria-labelledby="filter5"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itembr1" />
-                                    <label for="itembr1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itembr2" />
-                                    <label for="itembr2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itembr3" />
-                                    <label for="itembr3">Item 3</label>
-                                </div>
-                            </li>
-                        </ul>
+                    <div id="collapse_@(item.Key)"
+                         class="collapse"
+                         aria-labelledby="filter_@(item.Key)"
+                         data-parent="#accordion">
+                        <div class="nb_filter_body">
+                            <ul class="nb_prd_filter_listouter">
+                                @foreach (var items in item.Value)
+                                {
+                                    string name = items.Value.Replace(" ", "_").Replace(",", "^");
+                                    <li>
+                                        <div class="form-group nb_prdpg_fg">
+                                            <input type="checkbox" id="@items.ProductAttributes.AttributeName.Replace(" ", "_")" value="@name" @(Request.Url.OriginalString.ToLower().Contains(name.ToLower()) ? "checked" : "")  />
+                                            <label for="@items.ProductAttributes.AttributeName.Replace(" ", "_")">@(items.Value)</label>
+                                        </div>
+                                    </li>
+                                }
+                                </ul>
+                        </div>
                     </div>
+                }
                 </div>
-                <div class="nb_filter_head" id="filter6">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed"
-                                data-toggle="collapse"
-                                data-target="#collapse6"
-                                aria-expanded="true"
-                                aria-controls="collapse6">
-                            Neckline
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapse6"
-                     class="collapse"
-                     aria-labelledby="filter6"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemnl1" />
-                                    <label for="itemnl1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemnl2" />
-                                    <label for="itemnl2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemnl3" />
-                                    <label for="itemnl3">Item 3</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="nb_filter_head" id="filter7">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed"
-                                data-toggle="collapse"
-                                data-target="#collapse7"
-                                aria-expanded="true"
-                                aria-controls="collapse7">
-                            Pattern
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapse7"
-                     class="collapse"
-                     aria-labelledby="filter7"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itempat1" />
-                                    <label for="itempat1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itempat2" />
-                                    <label for="itempat2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itempat3" />
-                                    <label for="itempat3">Item 3</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="nb_filter_head" id="filter7">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed"
-                                data-toggle="collapse"
-                                data-target="#collapse7"
-                                aria-expanded="true"
-                                aria-controls="collapse7">
-                            Made with
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapse7"
-                     class="collapse"
-                     aria-labelledby="filter7"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemmw1" />
-                                    <label for="itemmw1">Item 1</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemmw2" />
-                                    <label for="itemmw2">Item 2</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-group nb_prdpg_fg">
-                                    <input type="checkbox" id="itemmw3" />
-                                    <label for="itemmw3">Item 3</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
