--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -28,256 +28,112 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="#"><i class="icon-home"></i></a>
+                            <a href="/"><i class="icon-home"></i></a>
                         </li>
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Library</a></li>
+                        @if (!string.IsNullOrWhiteSpace(ViewBag.Category))
+                        {
+                            <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { category = ViewBag.Category })">@ViewBag.Category </a></li>
+                        }
+                        else if (!string.IsNullOrWhiteSpace(Manufacturer))
+                        {
+                            <li class="breadcrumb-item">@(Manufacturer.Replace("BrandS-", "").Replace("^", ",").Replace("_", " ").Replace("%5E", ",") ?? "")</li>
+
+                            ViewBag.Title = (Manufacturer.Replace("BrandS-", "").Replace("^", ",").Replace("_", " ").Replace("%5E", ",") ?? "") + " | " + ViewBag.SiteDescription;
+                        }
                     </ol>
                 </nav>
             </div>
             <div class="sortBy_outer">
                 <span class="srtby_txt">Sort By</span>
                 <div class="sortBysec">
-                    <select id="nb_prdlst_sortDrpdwn">
-                        <option value="volvo">Most Relevent</option>
-                        <option value="saab">Most Popular</option>
-                        <option value="mercedes">Customer Review</option>
-                        <option value="audi">Price (Low - High)</option>
-                        <option value="audi">Price (High - Low)</option>
-                    </select>
+                    @Html.DropDownList("SortedValues", EnumHelper.GetSelectList(typeof(SortProductTypeEnum)), htmlAttributes: new { id = "nb_prdlst_sortDrpdwn", @class = "form-control", onchange = "searchPoducts();" })
+                    @*<select id="nb_prdlst_sortDrpdwn">
+
+                            <option value="volvo">Most Relevent</option>
+                            <option value="saab">Most Popular</option>
+                            <option value="mercedes">Customer Review</option>
+                            <option value="audi">Price (Low - High)</option>
+                            <option value="audi">Price (High - Low)</option>
+                        </select>*@
                 </div>
             </div>
         </div>
         <div class="row">
-            @Html.Action("_DynamicFilters")
+            @Html.Action("_DynamicFilters", new { category = ViewBag.Category, productName = ViewBag.CurrentFilter })
             <div class="col-md-8 col-lg-9">
                 <div class="nb_prd_listing_wrap">
-                    <h3 class="head">New</h3>
-                    <ul class="tagList">
-                        <li>
-                            <a href="">
-                                New In
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Jumpers
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Colour Block
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Roll Neck
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Zip Neck
-                            </a>
-                        </li>
-                    </ul>
+                    @*<h3 class="head">New</h3>
+                <ul class="tagList">
+                    <li>
+                        <a href="">
+                            New In
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Jumpers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Colour Block
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Roll Neck
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Zip Neck
+                        </a>
+                    </li>
+                </ul>*@
                     <div class="row">
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/1.jpg" />
-                                </span>
-                                <h3 class="prdName">Bear in Hoodie</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
+                        @foreach (var item in Model)
+                        {
+
+
+                            <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
+                                <div class="prd_lst_boxouter">
+                                    <span class="imagewrap">
+                                        <a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})"> <img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" /></a>
+                                    </span>
+                                    <h3 class="prdName">@item.Name</h3>
+                                    <div class="foot">
+                                        <span class="prd_amnt">@ViewBag.CurrencySymbol @item.SellPrice</span>
+                                        <ul class="icolist">
+                                            @if (@item.SellPrice > 0 && @item.SellPrice.HasValue && @item.PercentMargin > 0)
+                                            {
+                                                <li>
+                                                    <a href="javascript:;"><i class="icon-shopping-cart" onclick="AddToCart(@item.ProductId)"></i></a>
+                                                </li>
+                                            }
+                                            else
+                                            {
+                                                <li>
+                                                    <a href="javascript:;"><i class="icon-shopping-cart"></i></a>
+                                                </li>
+
+                                            }
+                                            <li>
+                                                <a href=""><i class="icon-love"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/2.jpg" />
-                                </span>
-                                <h3 class="prdName">Bobble Hat</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/3.jpg" />
-                                </span>
-                                <h3 class="prdName">Fashion Backpack</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/4.jpg" />
-                                </span>
-                                <h3 class="prdName">Knitted Scarf</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/5.jpg" />
-                                </span>
-                                <h3 class="prdName">
-                                    Men's Long Sleeved Performance T-Shirt
-                                </h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/6.jpg" />
-                                </span>
-                                <h3 class="prdName">Roll Top Backpack</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/1.jpg" />
-                                </span>
-                                <h3 class="prdName">Bear in Hoodie</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/2.jpg" />
-                                </span>
-                                <h3 class="prdName">Bobble Hat</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/3.jpg" />
-                                </span>
-                                <h3 class="prdName">Fashion Backpack</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                            <div class="prd_lst_boxouter">
-                                <span class="imagewrap">
-                                    <img src="~/Content/Theme/University/app/images/productslist/6.jpg" />
-                                </span>
-                                <h3 class="prdName">Roll Top Backpack</h3>
-                                <div class="foot">
-                                    <span class="prd_amnt">£10.00</span>
-                                    <ul class="icolist">
-                                        <li>
-                                            <a href=""><i class="icon-shopping-cart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="icon-love"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        }
+
+                        <input type="text" id="currentsortedvalue" value="@(ViewBag.CurrentSort ?? " ")" style="display:none" />
+                        <input type="text" id="currentFiltervalue" value="@(ViewBag.CurrentFilter ?? " ")" style="display:none" />
+                        <input type="text" id="searchString" value="@(ViewBag.searchString ?? " ")" style="display:none" />
                     </div>
                 </div>
             </div>
         </div>
-  
+
     </div>
 </section>
 
