--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
     <title>@ViewBag.Title</title>
     <meta name="description" content="SmartShop" />
     @Styles.Render("~/Content/app/css/styles/university")
+    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.min.css">
     <link rel="icon" href="~/Content/Theme/University/app/images/favico.ico" />
     <link href="~/Content/Theme/University/app/css/owl.carousel.min.css" rel="stylesheet" />
+
 
 
     <script type="text/javascript">
@@ -54,6 +56,7 @@
 
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/javascript-searchproduct.js"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="~/Content/Theme/University/app/js/owl.carousel.min.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_skew_carousle.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_custom_script.js"></script>
